Fixed img assets

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>María Laura Pereyra | PAS</title>
 
   <!--====== Favicon Icon ======-->
-  <link rel="shortcut icon" href="../assets/images/favicon.png" type="image/png" />
+  <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png" />
 
   <!--====== Bootstrap css ======-->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -39,7 +39,7 @@
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="index.html">
-              <img src="assets/images/logo-blanco.png" alt="Logo" width="40%"/>
+              <img src="/assets/images/logo-blanco.png" alt="Logo" width="40%"/>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNine"
               aria-controls="navbarNine" aria-expanded="false" aria-label="Toggle navigation">
@@ -88,7 +88,7 @@
     </div>
     <div class="sidebar-content">
       <div class="sidebar-logo">
-        <a href="index.html"><img src="assets/images/logo.svg" alt="Logo" /></a>
+        <a href="index.html"><img src="assets/images/black-logo.jpg" alt="Logo" /></a>
       </div>
       <p class="text"> <strong> Horarios de atención: </strong>
         <EM>
@@ -141,7 +141,7 @@
         <div class="col-lg-6 col-md-12 col-12">
           <div class="header-content">
             <h1 hidden>María Laura Pereyra</h1>
-            <img src="/assets/images/header/info_webLaly.png" alt="María Laura Pereyra">
+            <img src="assets/images/header/info_webLaly.png" alt="María Laura Pereyra">
             <p>
               Soy Productora asesora de seguros y Técnica Superior en Gestión Financiera, mi misión es generar conciencia social sobre los seguros.
             </p>
@@ -840,7 +840,7 @@
               <div class="footer-widget f-about">
                 <div class="logo">
                   <a href="index.html">
-                    <img src="/assets/images/black-logo.jpg" alt="#" class="img-fluid" />
+                    <img src="assets/images/black-logo.jpg" alt="#" class="img-fluid" />
                   </a>
                 </div>
                 <p>
