--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="index.html">
-              <img src="assets/images/logo-blanco.png" alt="Logo" width="40%"/>
+              <img src="assets/images/iso.png" alt="Logo" width="10%"/>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNine"
               aria-controls="navbarNine" aria-expanded="false" aria-label="Toggle navigation">
@@ -844,7 +844,7 @@
                   </a>
                 </div>
                 <p>
-                  La tranquilidad en tiempos difíciles comienza con un seguro adecuado.
+                  "La tranquilidad en tiempos difíciles comienza con un seguro adecuado."
                 </p>
                 <p class="copyright-text">
                   <span>2024</span>Con ⚡ by
