--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="single-services">
             <div class="service-icon">
-              <i class="lni lni-capsule"></i>
+              <i class="lni lni-car"></i>
             </div>
             <div class="service-content">
               <h4>Seguros de Auto</h4>
@@ -344,7 +344,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="single-services">
             <div class="service-icon">
-              <i class="lni lni-bootstrap"></i>
+              <i class="lni lni-protection"></i>
             </div>
             <div class="service-content">
               <h4>Seguros de Vida</h4>
@@ -359,7 +359,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="single-services">
             <div class="service-icon">
-              <i class="lni lni-shortcode"></i>
+              <i class="lni lni-home"></i>
             </div>
             <div class="service-content">
               <h4>Seguros de Hogar</h4>
@@ -372,7 +372,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="single-services">
             <div class="service-icon">
-              <i class="lni lni-dashboard"></i>
+              <i class="lni lni-money-protection"></i>
             </div>
             <div class="service-content">
               <h4>Seguros de retiro</h4>
@@ -385,7 +385,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="single-services">
             <div class="service-icon">
-              <i class="lni lni-layers"></i>
+              <i class="lni lni-comments-reply"></i>
             </div>
             <div class="service-content">
               <h4>Consultorías y Asesorías</h4>
@@ -398,7 +398,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="single-services">
             <div class="service-icon">
-              <i class="lni lni-reload"></i>
+              <i class="lni lni-microphone"></i>
             </div>
             <div class="service-content">
               <h4>Charlas y Capacitaciones</h4>
@@ -470,7 +470,7 @@
           <div class="pricing-style-fourteen middle">
             <div class="table-head">
               <h6 class="title">Consultorías</h4>
-                <p>Análisis y asesoramiento de asuntos financieros básicos.</p>
+                <p>Servicio integral de consultoría para la toma de decisiones.</p>
 <!--                 <div class="price">
                   <h2 class="amount">
                     <span class="currency">$</span>99<span class="duration">/mo </span>
@@ -499,7 +499,7 @@
           <div class="pricing-style-fourteen">
             <div class="table-head">
               <h6 class="title">Capacitaciones</h4>
-                <p>Charlas y talleres sobre seguros, finanzas y lo que te haga falta.</p>
+                <p>Charlas y Talleres para empoderar a individuos y empresas.</p>
 <!--                 <div class="price">
                   <h2 class="amount">
                     <span class="currency">$</span>150<span class="duration">/mo </span>
